--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.3.2",
         "composer/installers": "*",
-		"silverstripe/framework": "3.3.1"
+		"silverstripe/framework": "3.3.*"
     },
     "scripts": {
         "post-install-cmd": [
